new file uploaded

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -4,6 +4,13 @@
     </IfModule>
 
     RewriteEngine On
+    
+    # Increase PHP upload limits for large video files (5GB+)
+    php_value upload_max_filesize 5120M
+    php_value post_max_size 5120M
+    php_value max_execution_time 3600
+    php_value max_input_time 3600
+    php_value memory_limit 1024M
 
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
