--- a/public/.htaccess
+++ b/public/.htaccess
@@ -5,12 +5,18 @@
 
     RewriteEngine On
     
-    # Increase PHP upload limits for large video files (5GB+)
-    php_value upload_max_filesize 5120M
-    php_value post_max_size 5120M
-    php_value max_execution_time 3600
-    php_value max_input_time 3600
-    php_value memory_limit 1024M
+    # NOTE (shared hosting / Hostinger):
+    # `php_value` directives can cause 500 errors under PHP-FPM.
+    # Keep these only for mod_php. For PHP-FPM, set limits in Hostinger PHP settings,
+    # or use a `php.ini` / `.user.ini` depending on your hosting plan.
+    <IfModule mod_php.c>
+        # Increase PHP upload limits for large video files (5GB+)
+        php_value upload_max_filesize 5120M
+        php_value post_max_size 5120M
+        php_value max_execution_time 3600
+        php_value max_input_time 3600
+        php_value memory_limit 1024M
+    </IfModule>
 
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
